--- a/assets/css/pokedex.css
+++ b/assets/css/pokedex.css
@@ -1,89 +1,102 @@
-
 .pokemons {
     display: grid;
     grid-template-columns: 1fr;
-    list-style: none;
-    padding: 0;
     margin: 0;
+    padding: 0;
+    list-style: none;
 }
 
 .normal {
-     background-color: #a6a877;
+    background-color: #a6a877;
 }
+
 .grass {
-     background-color: #77c850;
+    background-color: #77c850;
 }
+
 .fire {
-     background-color: #ee7f30;
+    background-color: #ee7f30;
 }
+
 .water {
-     background-color: #678fee;
+    background-color: #678fee;
 }
+
 .electric {
-     background-color: #f7cf2e;
+    background-color: #f7cf2e;
 }
+
 .ice {
-     background-color: #98d5d7;
+    background-color: #98d5d7;
 }
+
 .ground {
-     background-color: #dfbf69;
+    background-color: #dfbf69;
 }
+
 .flying {
-     background-color: #a98ff0;
+    background-color: #a98ff0;
 }
+
 .poison {
-     background-color: #a040a0;
+    background-color: #a040a0;
 }
+
 .fighting {
-     background-color: #bf3029;
+    background-color: #bf3029;
 }
+
 .psychic {
-     background-color: #f65687;
+    background-color: #f65687;
 }
+
 .dark {
-     background-color: #725847;
-} 
+    background-color: #725847;
+}
+
 .rock {
-     background-color: #b8a137;
+    background-color: #b8a137;
 }
+
 .bug {
-     background-color: #a8b720;
+    background-color: #a8b720;
 }
+
 .ghost {
-     background-color: #6e5896;
+    background-color: #6e5896;
 }
+
 .steel {
-     background-color: #b9b7cf;
+    background-color: #b9b7cf;
 }
+
 .dragon {
-     background-color: #6f38f6;
+    background-color: #6f38f6;
 }
+
 .fairy {
-     background-color: #f9aec7;
+    background-color: #f9aec7;
 }
 
-
-
-.pokemon{
+.pokemon {
     display: flex;
     flex-direction: column;
     margin: .5rem;
-    padding: 2rem 1rem;
+    padding: 1rem;
     border-radius: 1rem;
-    
 }
 
 .pokemon .number {
-    color: #011f18;
-    opacity: .5;
+    color: #000;
+    opacity: .3;
     text-align: right;
     font-size: .625rem;
 }
 
 .pokemon .name {
-    color:#fff;
-    margin-bottom: 0;
     text-transform: capitalize;
+    color: #fff;
+    margin-bottom: .25rem;
 }
 
 .pokemon .detail {
@@ -100,17 +113,16 @@
 }
 
 .pokemon .detail .types .type {
-    color:#fff;
+    color: #fff;
     padding: .25rem .5rem;
     margin: .25rem 0;
     font-size: .625rem;
     border-radius: 1rem;
     filter: brightness(1.1);
     text-align: center;
-
 }
 
-.pokemon .detail img{
+.pokemon .detail img {
     max-width: 100%;
     height: 70px;
 }
@@ -122,20 +134,17 @@
     align-items: center;
     width: 100%;
     padding: 1rem;
-
 }
 
-.pagination .button {
+.pagination button {
     padding: .25rem .5rem;
     margin: .25rem 0;
-    font-size: .625;
+    font-size: .625rem;
     color: #fff;
     background-color: #6c79db;
     border: none;
     border-radius: 1rem;
-
 }
-
 
 @media screen and (min-width: 380px) {
     .pokemons {
